name:                hsphint
version:             1.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bawolk/hsp#readme
license:             BSD3
author:              Bruce Wolk
maintainer:          bawolk@ucdavis.edu
copyright:           2019 Bruce Wolk
category:            Subpackage
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                       HspCommands
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , unordered-containers
                     , text
                     , directory
                     , filepath
                     , filemanip
                     , process
                     , regex-compat
  default-language:    Haskell2010

